Fix for sticky header not showing bundle/ charm title, icon and deploy button

--- a/jujugui/static/gui/src/app/components/entity-details/header/_header.scss
+++ b/jujugui/static/gui/src/app/components/entity-details/header/_header.scss
@@ -44,7 +44,7 @@
       bottom: 0;
       left: 0;
       right: 0;
-      padding: 20px 0;
+      padding: 20px 10px;
     }
 
     .entity-header {
@@ -60,6 +60,7 @@
       &__title {
         font-size: 20px;
         line-height: $sticky-icon-size;
+        min-height: $sticky-icon-size;
       }
 
       &__properties {
@@ -196,6 +197,12 @@
     }
   }
 
+  &__right {
+    @media screen and (max-width: 768px) {
+      margin-top: 20px;
+    }
+  }
+
   // scss-lint:disable IdSelector
   // sass-lint:disable no-ids, id-name-format
   #item-twitter,
@@ -226,6 +233,10 @@
   }
   // scss-lint:enable IdSelector
   // sass-lint:enable no-ids, id-name-format
+
+  @media screen and (max-width: 1050px) {
+    padding: 32px 10px;
+  }
 }
 
 
